--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxmp-rsa",
+  "name": "fest-skuy-skox",
   "version": "2.1.0",
   "description": "兼容小程序环境的rsa加解密库，支持超长文本和中文字符",
   "author": "neohan",
@@ -20,7 +20,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/neohan666/wxmp-rsa.git"
+    "url": "https://github.com/yong64361/fest-skuy-skox.git"
   },
   "devDependencies": {
     "typescript": "^4.3.5"
